--- a/index.html
+++ b/index.html
@@ -1,27 +1,95 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>York's personal bio</title>
-  </head>
-  <h1>York's personal bio</h1>
-  <p>
-    I am a senior in <em>Computer Science</em> major. My research interests lie in the field of <strong>multicore </strong>computation and writing high-performace server software.
-  </p>
-  <h2>Education</h2>
-  <ul>
-    <li>Washington University in St. Louis</li> 
-    <li>Bachelor of Science in Computer Science (In progress)</li>
-    <li>GPA: 3.97</li>
-  </ul>
-  <h2>Work Experiences</h2>
-  <h3>Lead Game developer for Operation Scorpion (2017-2019)</h3>
-  <p>
-  <a href="https://www.roblox.com/games/1436977294/Operation-Scorpion">Operation Scorpion</a> is an <abbr title="First person shooter">FPS</abbr> game on Roblox. So far it has received over <em>8 million downloads</em>, and attracted many Youtubers playing our game (
-  <a href="https://www.youtube.com/watch?v=AeLPJM2lggY">Montage by Brikon</a> ,
-  <a href="https://www.youtube.com/watch?v=l_4RQzX7r6g">Montage by Rataids</a> 
-  ). There are even competitive matches held by our fans (<a href="https://www.youtube.com/watch?v=15YFMZQ6ksA&t=12s">Operation Scorpion - Competitive Scrim | Serenity vs. PT6</a>). 
-  </p>
-  <br>
-  <hr>
-  <em>handcrafted with love in Neovim and Arch Linux</em>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>York's Projects</title>
+
+  <!-- provide info for search engines -->
+  <meta name="description" content="York's Projects">
+  <link href="style.css" type="text/css" rel="stylesheet">
+</head>
+<body>
+  <div class="entirepage">
+
+    <div id="topbar">
+      <div>
+        <a class='topbutton' href="#intro">Top</a> 
+        <a class='topbutton' href="assets/york-resume.pdf" download="york-resume.pdf">Resume</a> 
+        <a class='topbutton' href="mailto: yil173@ucsd.edu">Email</a> 
+      </div>
+    </div>
+    <div id="fading"></div>
+
+    <div class="intro" id="intro">
+      <!-- <h1>Yifan (York) Liu</h1> -->
+      <div class='lgrid'>
+        <figure>
+          <img src="assets/washu_small.jpg" alt="santa cruz beach">
+          <!-- <figcaption>Santa Cruz beach before the covid</figcaption> -->
+        </figure>
+        <div>
+          <p class='greeting'>Hi,</p>
+          <p>I am Yifan (York) Liu, a M.S. in Computer Science candidate in UC San Diego. 
+          I am a former game developer and a former researcher in the field of server software and parallel computing. 
+          Currently, I am interested in software engineering or game development internships in summer 2022. 
+          Below are my projects with link to code samples.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="project">
+      <h2>Operation Scorpion (an FPS game on Roblox)</h2>
+      <p>
+      I was the only programmer in a startup game studio called Maximillian Studios, and I worked intensively with the artists, game designers, and marketing people in the team. We shipped our first game Operation Scorpion in 2018. To date, the game has accumulated <u>10 million visits</u> and sparked thousands of Youtube Videos.
+      </p>
+
+      <hr class='blanksep'>
+      <figure>
+        <img src="assets/os-best.JPG" alt="operation scorpion" width="666">
+        <!-- <figcaption>See more in-game screenshots here</figcaption> -->
+      </figure>
+
+      <!-- <p> -->
+      <!-- https://www.youtube.com/results?search_query=operation+scorpion -->
+      <!-- </p> -->
+
+      <p>
+      Operation Scorpion is a tactical first person shooter game on the Roblox platform and I handled every aspect of programming: 
+      user interface, character animation system, gun animations, multiplayer game logic, user progression system, matchmaking system, and persistent datastore. 
+      The game itself is written in <u>Lua</u> and the data servers are written in <u>ExpressJS</u> and <u>postgreSQL</u>. 
+      During year 2019, we shipped monthly updates and I am proud to claim that I managed a large codebase very well. 
+      Making this game transformed me from a top grader in university to a full stack game developer with team mindset and practical experience.
+      </p>
+      
+      <!-- <p> -->
+      <!-- https://www.roblox.com/games/1436977294/ -->
+      <!-- </p> -->
+
+      <p>
+      Links:
+      </p>
+      <ul>
+        <li>The game's webpage</li>
+        <li>Source code (2019)</li>
+        <li>More </li>
+      </ul>
+
+      <p>
+      Below are Youtube videos made by fans and Youtubers doing Roblox contents:
+      </p>
+      <ul>
+        <li> <a href="https://www.youtube.com/watch?v=EpQ4ZUU1UTE">The Most UNDERRATED FPS on Roblox | Video by Oscar</a> </li>
+        <li> <a href="https://www.youtube.com/watch?v=yQxqeUA7SV8">This FPS is Insame | Gameplay recording by ItsJustAGhost</a> </li>
+        <li> <a href="https://www.youtube.com/watch?v=B-Ke6SVD95M">The Best Graphics on Roblox | by Ruben Sim</a> </li>
+
+        <li> <a href="https://www.youtube.com/watch?v=l_4RQzX7r6g">Gameplay montage by Rataids</a> </li>
+        <li> <a href="https://www.youtube.com/watch?v=AeLPJM2lggY">Gameplay recording by Brikon</a> </li>
+        <li> <a href="https://www.youtube.com/watch?v=15YFMZQ6ksA&t=12s">A competitive match organized by fanbase, credit to PetriFyTV</a> </li>
+        <li> <a href="https://www.youtube.com/results?search_query=operation+scorpion+roblox">More Youtube videos about our game</a> </li>
+      </ul>
+    </div>
+
+
+  </div>
+</body>
 </html>
