test pdf download

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         </figure>
         <div>
           <p class='greeting'>Hi,</p>
-          <p>I am Yifan (York) Liu, a M.S. in Computer Science candidate in UC San Diego. 
+          <p>I am Yifan (York) Liu, an M.S. in Computer Science candidate in UC San Diego. 
           I am a former game developer and a former researcher in the field of server software and parallel computing. 
           Currently, I am interested in software engineering or game development internships in summer 2022. 
-          Below are my projects with link to code samples.</p>
+          Below are my projects with links to code samples.</p>
         </div>
       </div>
     </div>
