--- a/index.html
+++ b/index.html
@@ -24,12 +24,11 @@
       <!-- <h1>Yifan (York) Liu</h1> -->
       <div class='lgrid'>
         <figure>
-          <img src="assets/washu_small.jpg" alt="santa cruz beach">
-          <!-- <figcaption>Santa Cruz beach before the covid</figcaption> -->
+          <img src="assets/washu_small.jpg" alt="My photo">
         </figure>
         <div>
           <p class='greeting'>Hi,</p>
-          <p>I am Yifan (York) Liu, an M.S. in Computer Science candidate in UC San Diego. 
+          <p>I am Yifan (York) Liu, an M.S. candidate in UC San Diego majoring in Computer Science. 
           I am a former game developer and a former researcher in the field of server software and parallel computing. 
           Currently, I am interested in software engineering or game development internships in summer 2022. 
           Below are my projects with links to code samples.</p>
@@ -37,7 +36,7 @@
       </div>
     </div>
 
-    <div class="project">
+    <div class="project" id="project-os">
       <h2>Operation Scorpion (an FPS game on Roblox)</h2>
       <p>
       I was the only programmer in a startup game studio called Maximillian Studios, and I worked intensively with the artists, game designers, and marketing people in the team. We shipped our first game Operation Scorpion in 2018. To date, the game has accumulated <u>10 million visits</u> and sparked thousands of Youtube Videos.
@@ -46,7 +45,7 @@
       <hr class='blanksep'>
       <figure>
         <img src="assets/os-best.JPG" alt="operation scorpion" width="666">
-        <!-- <figcaption>See more in-game screenshots here</figcaption> -->
+        <figcaption>See more in-game screenshots in the links below</figcaption>
       </figure>
 
       <!-- <p> -->
@@ -69,9 +68,9 @@
       Links:
       </p>
       <ul>
-        <li>The game's webpage</li>
-        <li>Source code (2019)</li>
-        <li>More </li>
+        <li> <a href="https://www.roblox.com/games/1436977294/">The game's webpage</a></li>
+        <li> <a href="https://github.com/l0exy1h/Operation-Scorpion">Source code (2019) (Repo)</a></li>
+        <li> <a href="osphotos.html">More in-game screenshots</a></li>
       </ul>
 
       <p>
@@ -89,6 +88,61 @@
       </ul>
     </div>
 
+
+    <div class="project" id="project-vocab">
+      <h2>Vocabulary Memorizer</h2>
+      <div class="rgrid">
+        <div>
+          <p>
+          My teammate and I designed and implemented a Vocabulary Memorizer using 
+          <u>HTML, CSS, javascript, browserify, Google Sheets API, and Google OAuth2 API</u>. 
+          </p>
+
+          <p>
+          The user can import/edit the word list in a Google Sheet, and start
+          memorizing words in a flashcard mode, where the front of the flashcard is the word and the back of
+          the card is its meaning. The front and back can hold texts in any language, which is useful when
+          learning a new language and memorizing unfamiliar words.
+          </p>
+          <p>
+          The repository (link down below) shall contain a README file that provides more detailed instructions and design choices.
+          </p>
+          <p>
+          Links:
+          </p>
+          <ul>
+            <li> <a href="https://wustlcse204.github.io/10-final-project-sherryyork/">Vocabulary Memorizer</a></li>
+            <li> <a href="https://github.com/l0exy1h/vocab-builder">Source code (Repo)</a></li>
+          </ul>
+        </div>
+        <figure>
+          <img src="assets/vocab.png" alt="vocab" width="666">
+          <!-- <figcaption>See more in-game screenshots in the links below</figcaption> -->
+        </figure>
+      </div>
+    </div>
+
+    <div class="project" id="project-todolist">
+      <h2>A Todolist Based on React.js</h2>
+      <div class="rgrid">
+        <div>
+          <p>
+          I Built a web-based todo list using <u>React</u>, where the user can add a todo item, mark/unmark a todo item as done, and remove a todo item. This web application scales with your display and, specifically, it supports mobile view.
+          </p>
+          <p>
+          Links:
+          </p>
+          <ul>
+            <li> <a href="https://wustlcse204.github.io/09-todo-react-l0exy1h/">Todolist</a></li>
+            <li> <a href="https://github.com/l0exy1h/todolist-react">Source code (Repo)</a></li>
+          </ul>
+        </div>
+        <figure>
+          <img src="assets/todolist.png" alt="todolist" width="666">
+          <!-- <figcaption>See more in-game screenshots in the links below</figcaption> -->
+        </figure>
+      </div>
+    </div>
 
   </div>
 </body>
