--- a/index.html
+++ b/index.html
@@ -144,6 +144,13 @@
       </div>
     </div>
 
+    <div class="project" id="project-more">
+      <h2>More Projects</h2>
+      <p>
+      Please use my <a href="https://github.com/l0exy1h">Github link</a> to view my projects with source codes.
+      </p>
+    </div>
+
   </div>
 </body>
 </html>
