open in new tab

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="topbar">
       <div>
         <a class='topbutton' href="#intro">Top</a> 
-        <a class='topbutton' href="assets/york-resume.pdf" download="york-resume.pdf">Resume</a> 
+        <a target='_blank' rel='noopener noreferrer' class='topbutton' href="assets/york-resume.pdf" download="york-resume.pdf">Resume</a> 
         <a class='topbutton' href="mailto: yil173@ucsd.edu">Email</a> 
       </div>
     </div>
@@ -68,23 +68,23 @@
       Links:
       </p>
       <ul>
-        <li> <a href="https://www.roblox.com/games/1436977294/">The game's webpage</a></li>
-        <li> <a href="https://github.com/l0exy1h/Operation-Scorpion">Source code (2019) (Repo)</a></li>
-        <li> <a href="osphotos.html">More in-game screenshots</a></li>
+        <li> <a target='_blank' rel='noopener noreferrer' href="https://www.roblox.com/games/1436977294/">The game's webpage</a></li>
+        <li> <a target='_blank' rel='noopener noreferrer' href="https://github.com/l0exy1h/Operation-Scorpion">Source code (2019) (Repo)</a></li>
+        <li> <a target='_blank' rel='noopener noreferrer' href="osphotos.html">More in-game screenshots</a></li>
       </ul>
 
       <p>
       Below are Youtube videos made by fans and Youtubers doing Roblox contents:
       </p>
       <ul>
-        <li> <a href="https://www.youtube.com/watch?v=EpQ4ZUU1UTE">The Most UNDERRATED FPS on Roblox | Video by Oscar</a> </li>
-        <li> <a href="https://www.youtube.com/watch?v=yQxqeUA7SV8">This FPS is Insame | Gameplay recording by ItsJustAGhost</a> </li>
-        <li> <a href="https://www.youtube.com/watch?v=B-Ke6SVD95M">The Best Graphics on Roblox | by Ruben Sim</a> </li>
+        <li> <a target='_blank' rel='noopener noreferrer' href="https://www.youtube.com/watch?v=EpQ4ZUU1UTE">The Most UNDERRATED FPS on Roblox | Video by Oscar</a> </li>
+        <li> <a target='_blank' rel='noopener noreferrer' href="https://www.youtube.com/watch?v=yQxqeUA7SV8">This FPS is Insame | Gameplay recording by ItsJustAGhost</a> </li>
+        <li> <a target='_blank' rel='noopener noreferrer' href="https://www.youtube.com/watch?v=B-Ke6SVD95M">The Best Graphics on Roblox | by Ruben Sim</a> </li>
 
-        <li> <a href="https://www.youtube.com/watch?v=l_4RQzX7r6g">Gameplay montage by Rataids</a> </li>
-        <li> <a href="https://www.youtube.com/watch?v=AeLPJM2lggY">Gameplay recording by Brikon</a> </li>
-        <li> <a href="https://www.youtube.com/watch?v=15YFMZQ6ksA&t=12s">A competitive match organized by fanbase, credit to PetriFyTV</a> </li>
-        <li> <a href="https://www.youtube.com/results?search_query=operation+scorpion+roblox">More Youtube videos about our game</a> </li>
+        <li> <a target='_blank' rel='noopener noreferrer' href="https://www.youtube.com/watch?v=l_4RQzX7r6g">Gameplay montage by Rataids</a> </li>
+        <li> <a target='_blank' rel='noopener noreferrer' href="https://www.youtube.com/watch?v=AeLPJM2lggY">Gameplay recording by Brikon</a> </li>
+        <li> <a target='_blank' rel='noopener noreferrer' href="https://www.youtube.com/watch?v=15YFMZQ6ksA&t=12s">A competitive match organized by fanbase, credit to PetriFyTV</a> </li>
+        <li> <a target='_blank' rel='noopener noreferrer' href="https://www.youtube.com/results?search_query=operation+scorpion+roblox">More Youtube videos about our game</a> </li>
       </ul>
     </div>
 
@@ -111,8 +111,8 @@
           Links:
           </p>
           <ul>
-            <li> <a href="https://wustlcse204.github.io/10-final-project-sherryyork/">Vocabulary Memorizer</a></li>
-            <li> <a href="https://github.com/l0exy1h/vocab-builder">Source code (Repo)</a></li>
+            <li> <a target='_blank' rel='noopener noreferrer' href="https://wustlcse204.github.io/10-final-project-sherryyork/">Vocabulary Memorizer</a></li>
+            <li> <a target='_blank' rel='noopener noreferrer' href="https://github.com/l0exy1h/vocab-builder">Source code (Repo)</a></li>
           </ul>
         </div>
         <figure>
@@ -133,8 +133,8 @@
           Links:
           </p>
           <ul>
-            <li> <a href="https://wustlcse204.github.io/09-todo-react-l0exy1h/">Todolist</a></li>
-            <li> <a href="https://github.com/l0exy1h/todolist-react">Source code (Repo)</a></li>
+            <li> <a target='_blank' rel='noopener noreferrer' href="https://wustlcse204.github.io/09-todo-react-l0exy1h/">Todolist</a></li>
+            <li> <a target='_blank' rel='noopener noreferrer' href="https://github.com/l0exy1h/todolist-react">Source code (Repo)</a></li>
           </ul>
         </div>
         <figure>
@@ -147,7 +147,7 @@
     <div class="project" id="project-more">
       <h2>More Projects</h2>
       <p>
-      Please use my <a href="https://github.com/l0exy1h">Github link</a> to view my projects with source codes.
+      Please use my <a target='_blank' rel='noopener noreferrer' href="https://github.com/l0exy1h">Github link</a> to view my projects with source codes.
       </p>
     </div>
 
